--- a/mystyle.css
+++ b/mystyle.css
@@ -1,5 +1,5 @@
 .DataTable {
-/*    margin: 10px;
+    margin: 10px;
     -moz-border-radius : 10px; /* Firefox */
     -webkit-border-radius : 10px; /* Safari & Chrome */
     -khtml-border-radius : 10px; /* Linux browsers */
@@ -18,7 +18,7 @@
     background: -ms-linear-gradient(top,  #eeeeee 0%,#cccccc 100%); /* IE10+ */
     background: linear-gradient(to bottom,  #eeeeee 0%,#cccccc 100%); /* W3C */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eeeeee', endColorstr='#cccccc',GradientType=0 ); /* IE6-9 */
-*/
+
     border-collapse: separate;
     border-spacing: 0;    
     border: 1px solid black;
@@ -29,7 +29,7 @@
 
 .TableHeaderFooter
 {
-/*
+
     background: #eeeeee; /* Old browsers */
         background: -moz-linear-gradient(top,  #eeeeee 0%, #cccccc 100%); /* FF3.6+ */
         background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#eeeeee), color-stop(100%,#cccccc)); /* Chrome,Safari4+ */
@@ -39,5 +39,5 @@
         background: linear-gradient(to bottom,  #eeeeee 0%,#cccccc 100%); /* W3C */
         filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eeeeee', endColorstr='#cccccc',GradientType=0 ); /* IE6-9 */
         overflow: hidden;
-*/        
+        
 }
